[package]
name = "cyusb"
version = "0.9.0"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2018"
repository = "https://github.com/nicholasbishop/cyusb-rs"
license = "Apache-2.0"
description = "Host crate for interacting with Cypress USB devices"
readme = "README.md"

[dependencies]
env_logger = "0.9"
log = "0.4"
rusb = "0.8"
structopt = "0.3"
